fix unintended overflow

--- a/src/component/member-list.css
+++ b/src/component/member-list.css
@@ -1,5 +1,9 @@
 .container {
   width: 100%;
   margin: 24px 0;
-  display: flex;
+  overflow-x: hidden;
+
+  & > .list {
+    display: flex;
+  }
 }
